# src-wisc-sdc-fa25-team

./: .gitignore  HACKING
.github/: pull-request-template.md
api/: README.OLD  README.md  pyproject.toml  requirements.txt
api/lib/app/: __init__.py  __main__.py  db.sqlite3
api/var/: 0000-init.sql  0000-values.sql
hooks/: LINK.PL  install
web/: .prettierignore  README.OLD  README.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.css
web/src/lib/debug/: Console.svelte  conctl.ts
web/src/lib/etc/: environ.ts
web/src/lib/mod/: Search.svelte
web/src/lib/sub/: search.ts
web/src/routes/: +layout.svelte  +page.svelte
